log/build_2021-05-31_13-06-27/gazebo_plugin_sim/stderr.log
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:75:7: error: ‘GazeboRosDiffDrive’ has not been declared
   75 |  void GazeboRosDiffDrive::Reset()
      |       ^~~~~~~~~~~~~~~~~~
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp: In function ‘void gazebo_plugin_sim::Reset()’:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:77:4: error: ‘impl_’ was not declared in this scope; did you mean ‘mpl_’?
   77 |    impl_->ros_node_.reset();
      |    ^~~~~
      |    mpl_
At global scope:
cc1plus: warning: unrecognized command line option ‘-Wno-inconsistent-missing-override’
make[2]: *** [CMakeFiles/platform_plugin_test.dir/build.make:63: CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform_plugin_test.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
